--- a/prime_home/templates/prime_home/passers_page_by_klt_number.html
+++ b/prime_home/templates/prime_home/passers_page_by_klt_number.html
@@ -30,35 +30,53 @@
 
                 <div class="row mb-5">
                     <div class="form-group col-md-6">
-                        <label class="">Branch</label>
-                        <select class="form-control js-filter-branch">
+                        <label class="">Filter</label>
+                        <select class="form-control js-filter">
                             <option value="all">All</option>
-    
-                            {% for branch in branches %}
-                                <option value="{{ branch.id }}" data-teacher="{% if branch.teacher %} {{ branch.teacher.lname }}{{ branch.teacher.fname }}{% else %}No Teacher{% endif %}">
-                                    {{ branch.name }}
-                                </option>
-                            {% endfor %}
+                            <option value="branches_with_teacher">Branches with teacher</option>
                         </select>
-                    </div>
-                    <div class="form-group col-md-6 js-branch-teacher" style="display:none">
-                        <label class="">Teacher</label>
-                        <input type="text" class="form-control" readonly>
                     </div>
                 </div>
 
-                <table class="align-middle mb-0 table table-bordered table-striped table-hover js-table-passers">
-                    <thead>
-                        <tr>
-                            <th class="text-center">ID</th>
-                            <th class="text-center">NAME</th>
-                            <th class="text-center">SCORE</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <!-- load with json -->
-                    </tbody>
-                </table>
+                <div class="js-filter-content" data-value="all">
+                    <table class="align-middle mb-0 table table-bordered table-striped table-hover js-table-passers" data-branch="">
+                        <thead>
+                            <tr>
+                                <th class="text-center">ID</th>
+                                <th class="text-center">NAME</th>
+                                <th class="text-center">SCORE</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <!-- load with json -->
+                        </tbody>
+                    </table>
+                </div>
+                <div class="js-filter-content" data-value="branches_with_teacher" style="display: none;">
+                    {% for branch in branches %}
+                        <h5 class="text-dark">{{ branch.name }}</h5>
+                        {% if branch.teacher %}
+                            <h5 class="text-dark">
+                                Teacher:
+                                {{ branch.teacher.fname }} {{ branch.teacher.lname }}
+                            </h5>
+                        {% endif %}
+                        <br>
+                        <table class="align-middle mb-0 table table-bordered table-striped table-hover js-table-passers" data-branch="{{branch.id}}">
+                            <thead>
+                                <tr>
+                                    <th class="text-center">ID</th>
+                                    <th class="text-center">NAME</th>
+                                    <th class="text-center">SCORE</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <!-- load with json -->
+                            </tbody>
+                        </table>
+                        <br><br><br>
+                    {% endfor %}
+                </div>
             </div>
         </div>                     
     </div>                 
@@ -78,33 +96,37 @@
 <script type="text/javascript" src="{{ url_for('bp_admin.static', filename='DataTables/datatables.js') }}"></script>
 <script>
     $(document).ready(function (){
-        var dtbl_table = $('.js-table-passers').DataTable({
-            "pageLength": 100,
-            "serverSide": true,
-            "columnDefs": [
-                { "className": "text-center", "visible": false, "targets": 0},
-                { "className": "text-center", "targets": 1},
-                { "className": "text-center", "targets": 2},
-            ],
-            "ajax": {
-                "url": "/home/datatables/passers",
-                "data": function (d) {
-                    d.klt_number = "{{ klt_number }}";
-                    d.branch = $(".js-filter-branch").val();
-                },
-            }
-        });
+        $('.js-filter').change(function(e){
+            $('.js-filter-content').hide();
 
-        $('.js-filter-branch').change(function(e){
-            if ($(this).val() == 'all') {
-                $('.js-branch-teacher').hide();
-                $('.js-branch-teacher input').val('');
-            } else {
-                $('.js-branch-teacher').show();
-                $('.js-branch-teacher input').val($(this).find(":selected").data('teacher'));
-            }
-            dtbl_table.ajax.reload();
+            $('.js-filter-content[data-value="' + $(this).val() + '"]').show();
+            $('.js-filter-content[data-value="' + $(this).val() + '"]').find('.js-table-passers').each(function(){
+                let branchId = $(this).data('branch');
+                if ($(this).data('datatable')) {
+                    $(this).data('datatable').ajax.reload();
+                } else {
+                    var dtbl_table = $(this).DataTable({
+                        "pageLength": 100,
+                        "serverSide": true,
+                        "columnDefs": [
+                            { "className": "text-center", "visible": false, "targets": 0},
+                            { "className": "text-center", "targets": 1},
+                            { "className": "text-center", "targets": 2},
+                        ],
+                        "ajax": {
+                            "url": "/home/datatables/passers",
+                            "data": function (d) {
+                                d.klt_number = "{{ klt_number }}";
+                                d.branch = branchId;
+                            },
+                        }
+                    });
+
+                    $(this).data('datatable', dtbl_table);
+                }
+            });
         });
+        $('.js-filter').trigger('change');
     });
 </script>
 
