--- a/prime_home/templates/prime_home/index/welcome_section.html
+++ b/prime_home/templates/prime_home/index/welcome_section.html
@@ -9,14 +9,20 @@
     WE WANT TO HELP YOU GUYS SEEING AND HAVING A PROGRESSIVE FUTURE WITH US 
     LEARN KOREAN LANGUAGE WITH US!!!!</p>
                     <!-- <a class="btn btn-outline-light pl-4 pr-4 rounded-pill" href="{{url_for('prime_home.pre_register')}}">Pre-register</a> -->
-                    <a id="btn_contact_now" class="btn btn-light ml-2 pl-4 pr-4 rounded-pill" href="#">Contact Now</a>
+                    <a id="btn_contact_now" class="btn btn-link p-0" href="#">
+                        <svg width="50px" height="50px" viewBox="-2.4 -2.4 28.80 28.80" fill="none" xmlns="http://www.w3.org/2000/svg" stroke="#ffffff"><g id="SVGRepo_bgCarrier" stroke-width="0"><rect x="-2.4" y="-2.4" width="28.80" height="28.80" rx="14.4" fill="#0866ff" strokewidth="0"></rect></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M4 18L9 12M20 18L15 12M3 8L10.225 12.8166C10.8665 13.2443 11.1872 13.4582 11.5339 13.5412C11.8403 13.6147 12.1597 13.6147 12.4661 13.5412C12.8128 13.4582 13.1335 13.2443 13.775 12.8166L21 8M6.2 19H17.8C18.9201 19 19.4802 19 19.908 18.782C20.2843 18.5903 20.5903 18.2843 20.782 17.908C21 17.4802 21 16.9201 21 15.8V8.2C21 7.0799 21 6.51984 20.782 6.09202C20.5903 5.71569 20.2843 5.40973 19.908 5.21799C19.4802 5 18.9201 5 17.8 5H6.2C5.0799 5 4.51984 5 4.09202 5.21799C3.71569 5.40973 3.40973 5.71569 3.21799 6.09202C3 6.51984 3 7.07989 3 8.2V15.8C3 16.9201 3 17.4802 3.21799 17.908C3.40973 18.2843 3.71569 18.5903 4.09202 18.782C4.51984 19 5.07989 19 6.2 19Z" stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path> </g></svg>
+                    </a>
+                    <a class="btn btn-link ml-1 p-0" href="https://www.facebook.com/PrimeForWorkinSouthKorea?mibextid=ZbWKwL" target="_blank">
+                        <svg fill="#ffffff" width="50px" height="50px" viewBox="-403.2 -403.2 2726.40 2726.40" xmlns="http://www.w3.org/2000/svg" stroke="#ffffff"><g id="SVGRepo_bgCarrier" stroke-width="0"><rect x="-403.2" y="-403.2" width="2726.40" height="2726.40" rx="1363.2" fill="#0866ff" strokewidth="0"></rect></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M1168.737 487.897c44.672-41.401 113.824-36.889 118.9-36.663l289.354-.113 6.317-417.504L1539.65 22.9C1511.675 16.02 1426.053 0 1237.324 0 901.268 0 675.425 235.206 675.425 585.137v93.97H337v451.234h338.425V1920h451.234v-789.66h356.7l62.045-451.233H1126.66v-69.152c0-54.937 14.214-96.112 42.078-122.058" fill-rule="evenodd"></path> </g></svg>
+                    </a>
                 </div>
     
                 <div class="col-lg-6 pb-3 pt-3 text-right">
                     <h2 class="display-5 font-weight-bold">TOP-10 Latest Passers</h2>
                     <ul class="lead list-unstyled js-latest-passers">
                     </ul>
-                    <a class="btn btn-light ml-2 pl-4 pr-4 rounded-pill" href="{{url_for('prime_home.passers')}}">View More</a></div>
+                    <a class="btn btn-light ml-2 pl-4 pr-4 rounded-pill" href="{{url_for('prime_home.passers')}}">View More</a>
+                </div>
                 </div>
             </div>
         </section>
