--- a/app/admin/templates/admin/admin_sidebar.html
+++ b/app/admin/templates/admin/admin_sidebar.html
@@ -109,7 +109,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="{{url_for('bp_admin.under_construction')}}?message=Student Records > Deployed">
+                            <a id="li_deployed" href="{{url_for('lms.deployed')}}">
                                 <i class="metismenu-icon"></i>
                                 Deployed
                             </a>
