--- a/prime_admin/templates/lms/cash_flow.html
+++ b/prime_admin/templates/lms/cash_flow.html
@@ -711,7 +711,7 @@
 
                 swal({
                     title: `Confirm`,
-                    text: "Double check your inputted data!",
+                    text: "Double check form data",
                     type: "warning",
                     showCancelButton: true,
                     confirmButtonClass: "btn-danger",
