--- a/prime_admin/templates/lms/fund_wallet/fund_wallet.html
+++ b/prime_admin/templates/lms/fund_wallet/fund_wallet.html
@@ -260,7 +260,7 @@
 
                 swal({
                     title: `Add fund to fund wallet?`,
-                    text: "Double check your inputted data!",
+                    text: "Double check form data",
                     type: "warning",
                     showCancelButton: true,
                     confirmButtonClass: "btn-danger",
@@ -358,7 +358,7 @@
 
                 swal({
                     title: `Add expenses?`,
-                    text: "Double check your inputted data!",
+                    text: "Double check form data!",
                     type: "warning",
                     showCancelButton: true,
                     confirmButtonClass: "btn-danger",
