--- a/prime_admin/templates/lms/orientation_attendance.html
+++ b/prime_admin/templates/lms/orientation_attendance.html
@@ -108,7 +108,7 @@
 
                 swal({
                     title: `Orient new student?`,
-                    text: "Double check your inputted data!",
+                    text: "Double check form data!",
                     type: "warning",
                     showCancelButton: true,
                     confirmButtonClass: "btn-danger",
