--- a/prime_admin/templates/lms/payroll/create_payslip_page.html
+++ b/prime_admin/templates/lms/payroll/create_payslip_page.html
@@ -279,7 +279,7 @@
 
                 swal({
                     title: `Create Payslip?`,
-                    text: "Double check your inputted data!",
+                    text: "Double check form data!",
                     type: "warning",
                     showCancelButton: true,
                     confirmButtonClass: "btn-danger",
