--- a/prime_admin/templates/lms/student_records/examiners/examiners_page.html
+++ b/prime_admin/templates/lms/student_records/examiners/examiners_page.html
@@ -123,7 +123,7 @@
 
                 swal({
                     title: `Add this student?`,
-                    text: "Double check your inputted data!",
+                    text: "Double check form data!",
                     type: "warning",
                     showCancelButton: true,
                     confirmButtonClass: "btn-danger",
