--- a/prime_admin/templates/lms/student_records/hired/hired_page.html
+++ b/prime_admin/templates/lms/student_records/hired/hired_page.html
@@ -136,7 +136,7 @@
 
                 swal({
                     title: `Add this student?`,
-                    text: "Double check your inputted data!",
+                    text: "Double check form data!",
                     type: "warning",
                     showCancelButton: true,
                     confirmButtonClass: "btn-danger",
@@ -232,7 +232,7 @@
 
                 swal({
                     title: `Edit this student?`,
-                    text: "Double check your inputted data!",
+                    text: "Double check form data!",
                     type: "warning",
                     showCancelButton: true,
                     confirmButtonClass: "btn-danger",
