--- a/prime_admin/templates/lms/student_records/payments/payments_page.html
+++ b/prime_admin/templates/lms/student_records/payments/payments_page.html
@@ -42,7 +42,7 @@
 
                 swal({
                     title: `Add to passers?`,
-                    text: "Double check your inputted data!",
+                    text: "Double check form data!",
                     type: "warning",
                     showCancelButton: true,
                     confirmButtonClass: "btn-danger",
